--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -619,9 +619,34 @@ for five groups of mathematical digits starting at U+1D7E.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.25.9 represents approximately 4 weeks of development since Perl 5.25.8
+and contains approximately 24,000 lines of changes across 400 files from 23
+authors.
 
-  perl Porting/acknowledgements.pl v5.25.5..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 17,000 lines of changes to 220 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its third decade thanks to a vibrant community
+of users and developers. The following people are known to have contributed the
+improvements that became Perl 5.25.9:
+
+Aaron Crane, Abigail, Andreas König, Andy Lester, Aristotle Pagaltzis
+Chris 'BinGOs' Williams, Craig A. Berry, Dagfinn Ilmari Mannsåker, Dan Collins,
+David Mitchell, Father Chrysostomos, Hugo van der Sanden, James E Keenan,
+Jerry D. Hedden, John Lightsey, Karl Williamson, Paul Marquess, Peter Avalos,
+Sawyer X, Steve Hay, Tomasz Konojacki, Tony Cook, Zefram.
+
+The list above is almost certainly incomplete as it is automatically generated
+from version control history. In particular, it does not include the names of
+the (very much appreciated) contributors who reported issues to the Perl bug
+tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please see
+the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
