--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -607,6 +607,7 @@ the strings?).
  Aaron     5.25.6       2016-Oct-20
  Chad      5.25.7       2016-Nov-20
  Sawyer    5.25.8       2016-Dec-20
+ Abigail   5.25.9       2017-Jan-20
 
 =head2 SELECTED RELEASE SIZES
 
