Pods: Standardize on one pattern mod style
There were about 40 cases in pods where //m is used to represent the
pattern modifier 'm', but nearly 400 where /m is used.  Convert to the
most common representation.

--- a/pod/perlre.pod
+++ b/pod/perlre.pod
@@ -2549,7 +2549,7 @@ loops using regular expressions, with something as innocuous as:
 The C<o?> matches at the beginning of C<'foo'>, and since the position
 in the string is not moved by the match, C<o?> would match again and again
 because of the C<"*"> quantifier.  Another common way to create a similar cycle
-is with the looping modifier C<//g>:
+is with the looping modifier C</g>:
 
     @matches = ( 'foo' =~ m{ o? }xg );
 
